Adding main CSS and main JS

--- a/index.html
+++ b/index.html
@@ -1,11 +1,13 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en" dir="ltr">
-    <head>
-        <meta charset="utf-8"/>
-        <meta name="viewport" content="width=device-width, initial-scale=1"/>
-        <meta name="theme-color" content="#3377ff"/>
-        <title>AAKEN Developer - Codecademy Daily Task</title>
-    </head>
-    <body>
-    </body>
+  <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="theme-color" content="#3377ff" />
+    <title>AAKEN Developer - Codecademy Daily Task</title>
+    <link rel="stylesheet" href="assets/css/aakendev.css" />
+  </head>
+  <body>
+    <script src="assets/js/aakendev.js"></script>
+  </body>
 </html>
