--- a/index.html
+++ b/index.html
@@ -8,6 +8,13 @@
     <link rel="stylesheet" href="assets/css/aakendev.css" />
   </head>
   <body>
+    <header>
+      <h1>Codecademy Daily Task by AAKEN Developer</h1>
+    </header>
+    <main></main>
+    <footer>
+      <p>&copy;2022 by AAKEN Developer</p>
+    </footer>
     <script src="assets/js/aakendev.js"></script>
   </body>
 </html>
