--- a/index.html
+++ b/index.html
@@ -11,7 +11,48 @@
     <header>
       <h1>Codecademy Daily Task by AAKEN Developer</h1>
     </header>
-    <main></main>
+    <main>
+      <ul>
+        HTML
+        <li>HTML1</li>
+        <li>HTML2</li>
+        <li>HTML3</li>
+        <li>HTML4</li>
+        <li>HTML5</li>
+      </ul>
+      <ul>
+        CSS
+        <li>CSS1</li>
+        <li>CSS2</li>
+        <li>CSS3</li>
+        <li>CSS4</li>
+        <li>CSS5</li>
+      </ul>
+      <ul>
+        JS
+        <li>JS1</li>
+        <li>JS2</li>
+        <li>JS3</li>
+        <li>JS4</li>
+        <li>JS5</li>
+      </ul>
+      <ul>
+        Java
+        <li>Java1</li>
+        <li>Java2</li>
+        <li>Java3</li>
+        <li>Java4</li>
+        <li>Java5</li>
+      </ul>
+      <ul>
+        MySQL
+        <li>MySQL1</li>
+        <li>MySQL2</li>
+        <li>MySQL3</li>
+        <li>MySQL4</li>
+        <li>MySQL5</li>
+      </ul>
+    </main>
     <footer>
       <p>&copy;2022 by AAKEN Developer</p>
     </footer>
